--- a/style/style.css
+++ b/style/style.css
@@ -3,81 +3,59 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+}
+
+:root {
+    --cor-fundo: #F7F7F7 ;
+    --cor-primaria: #0A0A23; /*Azul Marinho profundo*/
+    --cor-secundaria: #00FFFF; /*Ciano*/
+    --cor-neutra-suave: #F7F7F7; /*Para fundo das paginas e artigos*/
+    --cor-neutra-escura: #1A1A1A; /*Para textos fortes, títulos, rodapé escuro.*/
+    --cor-destaque: #00B3B3; 
+    --fonte-principal: 'Inter', Arial, sans-serif;
 }
 
 
-
-
-/* Inicio do Cabeçalho  */
-
-header {
-    background-color: rgb(14, 14, 48);
-    color: white;
-    text-align: center;
+body {
+    font-family: 'Inter';
+    background-color: var(--cor-fundo);
+    color: var(--cor-primaria);
 }
 
-
-nav {
-    padding: 5px;
-    text-align: left;
-}
-
-
-
-nav > a {
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    font-size: 1em;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-
-nav a:hover {
-    background-color: rgb(255, 255, 255);
-    color: rgb(14, 14, 48);
-    border-radius: 5px;
-    
-}
-
-
-/* Fim do Cabeçalho */
-
-
-
-
-
-
-/* Conteúdo */
 
 
 main {
-    background-color: #F7F7F7 ;
-}
-
-article > h1 {
-    padding: 10px;
-    margin: auto;
     text-align: center;
+    max-width: 100vh;
+    margin: 250px auto;
+}
+
+h1 {
+    font-size: 10px;
+}
+
+p {
+    font-size: 100px;
 }
 
 
-article p {
-    padding: 10px;
+.fonte {
+  font-size: 0.85rem;
+  color: #666;
 }
 
-article {
-    background-color: white;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
-    padding: 20px;
-    margin: 40px auto;
-    max-width: 800px;
-    border-radius: 10px;
+.fonte a {
+  color: inherit;
+  text-decoration: underline;
 }
 
 
+.dolar-titulo {
+text-align: center;
+ font-size: 0;  /* Esconde o texto do H1 visualmente */
+}
 
+.dolar-titulo img.dolar-icone {
+  width: 250px;
+  height: 250px;
+}
